# django-boot

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yaml  linter.yaml
app/accounts/: forms.py
app/accounts/migrations/: 0001_initial.py
app/django_project/: settings.py  urls.py
app/templates/: 403_csrf.html  404.html  500.html  503.html  5xx.html  base.html
app/templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
app/templates/pages/: about.html  home.html
django_project/: settings.py
templates/: 403_csrf.html  404.html  5xx.html  base.html
templates/account/: login.html
