[project]
name = "django-boot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "crispy-bulma>=0.12.0",
  "django ~=5.1",
  "django-allauth[openid,socialaccount] ~=65.2",
  "django-debug-toolbar ~=4.4",
  "django-environ>=0.12.0",
  "django-maintenance-mode>=0.22.0",
  "gunicorn ~=23.0",
  "whitenoise ~=6.7",
]

[dependency-groups]
dev = [
  "djlint>=1.36.4",
  "ruff>=0.11.12",
  "typing_extensions ~=4.12",
]

[tool.djlint]
ignore = "H006"
